[gd_scene load_steps=20 format=3 uid="uid://cravviqoqd7fr"]

[ext_resource type="Texture2D" uid="uid://mx7uqftr273i" path="res://assets/icons/Copy.png" id="1_kyu4h"]
[ext_resource type="Script" path="res://scripts/node_editor.gd" id="1_rivm0"]
[ext_resource type="Texture2D" uid="uid://c0ipcd20y2552" path="res://assets/icons/Info.png" id="2_ujkkt"]
[ext_resource type="Texture2D" uid="uid://c8l5mwpvsnsdj" path="res://assets/icons/Resize.png" id="3_0bbys"]
[ext_resource type="Texture2D" uid="uid://cxtubwqkn2fhk" path="res://assets/icons/Trash.png" id="4_eqyul"]
[ext_resource type="Texture2D" uid="uid://cyx8ag10fbdem" path="res://assets/icons/Rotate.png" id="6_lxbl4"]
[ext_resource type="Shader" path="res://assets/shaders/grid.gdshader" id="7_4p2lq"]
[ext_resource type="Texture2D" uid="uid://bjbp0x88g2fge" path="res://assets/icons/Grid.png" id="8_7dv7m"]
[ext_resource type="Texture2D" uid="uid://gti58spvrnpl" path="res://assets/icons/Play.png" id="8_flewc"]
[ext_resource type="Texture2D" uid="uid://dm2k4v5xtr54a" path="res://assets/icons/Drag.png" id="10_tnt2h"]
[ext_resource type="Texture2D" uid="uid://cvvdbxqsntce4" path="res://assets/icons/Select.png" id="11_0yhnq"]
[ext_resource type="Texture2D" uid="uid://blaetnobp0mmu" path="res://assets/icons/Place.png" id="12_hx1ns"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3sxyp"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0m1h"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvrhl"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lu42b"]
size = Vector2(40, 40)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mltie"]
shader = ExtResource("7_4p2lq")
shader_parameter/cell_size = Vector2(64, 64)
shader_parameter/offset = Vector2(31, 31)
shader_parameter/width = 2
shader_parameter/color = Color(0, 0, 0, 0.47451)

[sub_resource type="Gradient" id="Gradient_x0ble"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2q3qt"]
gradient = SubResource("Gradient_x0ble")

[node name="NodeEditor" type="Node2D"]
z_index = 9
script = ExtResource("1_rivm0")

[node name="Info" type="Sprite2D" parent="."]
position = Vector2(-192, 232)
scale = Vector2(0.597015, 0.597015)
texture = ExtResource("2_ujkkt")

[node name="Line" type="Line2D" parent="."]
texture_repeat = 2
width = 4.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Resize" type="Area2D" parent="."]
z_index = 9
position = Vector2(-128, 320)

[node name="Resize" type="Sprite2D" parent="Resize"]
scale = Vector2(0.701754, 0.701754)
texture = ExtResource("3_0bbys")
offset = Vector2(28, 28)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resize"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_3sxyp")

[node name="Rotate" type="Area2D" parent="."]
z_index = 9
position = Vector2(-128, 320)

[node name="Rotate" type="Sprite2D" parent="Rotate"]
scale = Vector2(0.769231, 0.769231)
texture = ExtResource("6_lxbl4")
offset = Vector2(26, -26)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotate"]
position = Vector2(20, -20)
shape = SubResource("RectangleShape2D_d0m1h")

[node name="Trash" type="Area2D" parent="."]
z_index = 9
position = Vector2(-128, 320)

[node name="Trash" type="Sprite2D" parent="Trash"]
scale = Vector2(0.8, 0.740741)
texture = ExtResource("4_eqyul")
offset = Vector2(-25, -27)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash"]
position = Vector2(-20, -20)
shape = SubResource("RectangleShape2D_uvrhl")

[node name="Copy" type="Area2D" parent="."]
z_index = 9
position = Vector2(-128, 320)

[node name="Copy" type="Sprite2D" parent="Copy"]
scale = Vector2(0.701754, 0.701755)
texture = ExtResource("1_kyu4h")
offset = Vector2(-28, 28)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Copy"]
position = Vector2(-20, 20)
shape = SubResource("RectangleShape2D_lu42b")

[node name="Grid" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_mltie")
scale = Vector2(11.125, 20.75)
texture = SubResource("GradientTexture2D_2q3qt")
offset = Vector2(32, 32)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Bottom" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="UI/Bottom" groups=["EditorHide"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="VFlowContainer" type="VFlowContainer" parent="UI/Bottom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="TextureRect" parent="UI/Bottom/VFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_flewc")

[node name="VSeparator2" type="VSeparator" parent="UI/Bottom/VFlowContainer" groups=["EditorHide"]]
layout_mode = 2

[node name="GridButton" type="TextureRect" parent="UI/Bottom/VFlowContainer" groups=["EditorHide"]]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_7dv7m")

[node name="VSeparator" type="VSeparator" parent="UI/Bottom/VFlowContainer" groups=["EditorHide"]]
layout_mode = 2

[node name="DragButton" type="TextureRect" parent="UI/Bottom/VFlowContainer" groups=["EditorHide"]]
layout_mode = 2
texture = ExtResource("10_tnt2h")

[node name="SelectButton" type="TextureRect" parent="UI/Bottom/VFlowContainer" groups=["EditorHide"]]
layout_mode = 2
texture = ExtResource("11_0yhnq")

[node name="PlaceButton" type="TextureRect" parent="UI/Bottom/VFlowContainer" groups=["EditorHide"]]
layout_mode = 2
texture = ExtResource("12_hx1ns")

[node name="ItemsPopup" type="CanvasLayer" parent="."]

[connection signal="input_event" from="Resize" to="." method="_on_resize_input_event"]
[connection signal="input_event" from="Rotate" to="." method="_on_rotate_input_event"]
[connection signal="input_event" from="Trash" to="." method="_on_trash_input_event"]
[connection signal="input_event" from="Copy" to="." method="_on_copy_input_event"]
[connection signal="gui_input" from="UI/Bottom/VFlowContainer/PlayButton" to="." method="_on_play_gui_input"]
[connection signal="gui_input" from="UI/Bottom/VFlowContainer/GridButton" to="." method="_on_grid_gui_input"]
